--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: Finnix development weblog
 baseurl: ""
 url: "http://blog.finnix.org"
 permalink: /:year/:month/:day/:title/
+git_web_base: https://github.com/rfinnie/jekyll-finnix/blob/master/
 top_links:
   - {title: "Download", url: "http://www.finnix.org/Download"}
   - {title: "Wiki", url: "http://www.finnix.org/"}
