--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ git_web_base: https://github.com/rfinnie/jekyll-finnix/blob/master/
 top_links:
   - {title: "Download", url: "http://www.finnix.org/Download"}
   - {title: "Wiki", url: "http://www.finnix.org/"}
+keep_files:
+  - .git
 
 # Build settings
 markdown: kramdown
